test_regress/t/t_class_unsup_bad.out
%Error: t/t_class_unsup_bad.v:24:21: Syntax error: 'static'/'virtual'/'rand'/'randc' not allowed before typedef declaration
   24 |    rand typedef int irand_t;
      |                     ^~~~~~~
%Error: t/t_class_unsup_bad.v:25:22: Syntax error: 'static'/'virtual'/'rand'/'randc' not allowed before typedef declaration
   25 |    randc typedef int icrand_t;
      |                      ^~~~~~~~
%Error: t/t_class_unsup_bad.v:31:24: Syntax error: 'const'/'rand'/'randc' not allowed before function/task declaration
   31 |    const function void func_const; endfunction
      |                        ^~~~~~~~~~
%Error: Exiting due to
